# Cohrint

./: .gitignore  .mcp.json  ADMIN_GUIDE.md  BingSiteAuth.xml  GIT_HISTORY.md  GIT_MEMORY.md  IMPROVEMENTS.md  Makefile  PRODUCT_STRATEGY.md  README.md  TODO.md  cohrint-competitive-analysis.md  cohrint-dashboard-ui-spec.md  cohrint-guidebook-v1.3-COMPLETE.docx  cohrint-guidebook-v1.3-draft.md  cohrint-research-whitepaper.md  cspell.json  package-lock.json  package.json  test_e2e.py  test_full_e2e.py  vantage-ai-guidebook-v1.1-COMPLETE.docx  wrangler.toml
.github/: CODEOWNERS  pull_request_template.md
claude-intelligence/: README.md  install.sh  package.json
cohrint-agent/: README.md  SPEC_CLI_V2.md  pyproject.toml
cohrint-agent/cohrint_agent/: __init__.py  api_client.py  classifier.py  cli.py  cost_tracker.py  delegate.py  guardrails.py  hooks.py  optimizer.py  permission_server.py  permissions.py  pricing.py  process_safety.py  rate_limiter.py  recommendations.py  renderer.py  repl_completer.py  repl_input.py  sanitize.py  session.py  session_store.py  setup_wizard.py  subcommands.py  summary.py  telemetry.py  tools.py  tracker.py  tui.py  update_check.py  writers.py
cohrint-agent/cohrint_agent/backends/: __init__.py  base.py  claude_backend.py  codex_backend.py  gemini_backend.py
cohrint-agent/cohrint_agent/commands/: __init__.py  _list_helper.py  agents.py  exec_cmd.py  guardrails.py  hooks.py  init_cmd.py  mcp.py  models.py  permissions.py  plugins.py  settings_cmd.py  skills.py
cohrint-agent/cohrint_agent/inventory/: __init__.py  claude.py  codex.py  gemini.py
cohrint-agent/tests/: conftest.py  test_anomaly.py  test_api_client_retry.py  test_backends.py  test_bugs.py  test_classifier.py  test_claude_backend.py  test_claude_backend_live.py  test_cli.py  test_cli_v2_commands.py  test_cli_v2_delegate.py  test_cli_v2_dispatcher.py  test_cli_v2_inventory.py  test_cli_v2_phase4.py  test_cli_v2_tui.py  test_cli_v2_writers.py  test_cost_tracker.py  test_hooks.py  test_integration.py  test_optimizer.py  test_permission_server.py  test_permissions.py  test_pricing.py  test_rate_limiter.py  test_recommendations.py  test_rendering.py  test_repl_completer.py  test_repl_input.py  test_safety.py  test_session.py  test_session_lifecycle.py  test_setup_wizard.py  test_summary_budget.py  test_telemetry.py  test_tools.py  test_tracker.py  test_update_check.py
cohrint-agent/vantage_agent/: __init__.py  anomaly.py  api_client.py  classifier.py  cli.py  cost_tracker.py  hooks.py  optimizer.py  pricing.py  recommendations.py  renderer.py  session.py  telemetry.py  tools.py  tracker.py
cohrint-agent/vantage_agent/backends/: __init__.py  api_backend.py  base.py  claude_backend.py
cohrint-backend/: .env.example
cohrint-chatbot/: package-lock.json  package.json  tsconfig.json  wrangler.toml
cohrint-cli/: SPEC.md  TEST_SPEC.md  package.json  test-recommendations.mjs  test-session-aggressive.ts  tsconfig.json
cohrint-frontend/: README.md  _redirects  app.html  auth.html  benchmarks.html  blog.html  calculator.html  check.html  cohrint-index.html  cohrint-models.js  cp-console.js  docs.html  fonts.css  google-site-verification.html  index.html  manifest.json  report.html  seed-data.js  signup.html  supabase-schema.sql  superadmin.html  sw.js  theme.js  traces.js  vantage-models.js  yandex_bcabcfe3a07b4a0a.html
cohrint-js-sdk/: README.md  package-lock.json  package.json
cohrint-local-proxy/: package-lock.json  package.json
cohrint-mcp/: README.md  package-lock.json  package.json
cohrint-optimizer/: compressor.py  config.py  context_manager.py  utils.py
cohrint-worker/: package-lock.json  package.json  schema.sql  wrangler.staging.toml  wrangler.toml
docs/: security-audit-2026-04-09.md  task-dependency-graph.html  vantage-agent-reference.html
prompts/: consumption-analysis.md
scripts/: demo-seed.sql  pkg.sh  run-tests.sh
tests/: cleanup.py  (+24 more)
vantage-agent/: README.md  pyproject.toml
vantage-agent/tests/: conftest.py  test_anomaly.py  test_api_client_retry.py  test_backends.py  test_bugs.py  test_classifier.py  test_claude_backend.py  test_cli.py  test_cost_tracker.py  test_optimizer.py  test_permissions.py  test_pricing.py  test_recommendations.py  test_rendering.py  test_setup_wizard.py  test_telemetry.py  test_tracker.py
vantage-agent/vantage_agent/: __init__.py  anomaly.py  api_client.py  cli.py  cost_tracker.py  optimizer.py  permission_server.py  permissions.py  pricing.py  rate_limiter.py  recommendations.py  renderer.py  session.py  session_store.py  setup_wizard.py  telemetry.py  tool_registry.py  tools.py  tracker.py
vantage-agent/vantage_agent.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  top_level.txt
vantage-agent/vantage_agent/backends/: claude_backend.py  codex_backend.py  gemini_backend.py
vantage-agent/vantageai_agent.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt
vantage-backend/: Dockerfile  README.md  pyproject.toml  quick_test.py  railway.json  render.yaml  requirements-sdk.txt  requirements-server.txt  requirements.txt  supabase-ai-events.sql  supabase-schema-v2.sql
vantage-backend/examples/: quickstart.py
vantage-backend/sdk/: README.md  pyproject.toml
vantage-backend/sdk/vantage/: __init__.py  client.py
vantage-backend/sdk/vantage/models/: event.py
vantage-backend/sdk/vantage/proxy/: anthropic_proxy.py  litellm_proxy.py  openai_proxy.py  universal.py
vantage-backend/sdk/vantage/utils/: queue.py
vantage-backend/sdk/vantage/wrappers/: agent_wrapper.py
vantage-backend/sdk/vantageaiops/: __init__.py  client.py
vantage-backend/sdk/vantageaiops.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
vantage-backend/sdk/vantageaiops/analysis/: hallucination.py
vantage-backend/sdk/vantageaiops/proxy/: anthropic_proxy.py  litellm_proxy.py  openai_proxy.py  universal.py
vantage-backend/sdk/vantageaiops/utils/: queue.py
vantage-backend/sdk/vantageaiops/wrappers/: agent_wrapper.py
vantage-backend/server/: analytics.py  main.py  requirements.txt
vantage-backend/tests/: test_sdk.py
(+491 files in other folders)
