[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "cohrint-agent"
version = "0.4.1"
description = "AI coding agent with per-tool permissions, cost tracking, and token optimization"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.9"
authors = [{ name = "Aman Jain", email = "aman@cohrint.com" }]
keywords = ["ai", "agent", "cost-tracking", "claude", "codex", "gemini", "llm"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Utilities",
]
dependencies = [
    # Upper bounds pin tested-major ranges so a SDK major bump with
    # breaking tool-use/message schema changes can't silently break
    # every turn on a fresh install.
    "anthropic>=0.40.0,<1.0",
    "rich>=13.0.0,<15.0",
    "httpx>=0.24.0,<1.0",
    # TUI selectors for `cohrint-agent <verb> --interactive` and REPL /-menus.
    # prompt_toolkit is pulled in transitively.
    "questionary>=2.0,<3.0",
    # TOML parser for Codex config.toml. stdlib `tomllib` covers 3.11+;
    # `tomli` is the wire-compatible backport for 3.9/3.10.
    "tomli>=2.0; python_version<'3.11'",
]

[project.urls]
Homepage = "https://cohrint.com"
Documentation = "https://cohrint.com/docs"
Repository = "https://github.com/amanjain/cohrint"
"Bug Tracker" = "https://github.com/amanjain/cohrint/issues"

[project.optional-dependencies]
dev = ["pytest>=7.0", "pytest-asyncio>=0.21"]

[project.scripts]
cohrint-agent = "cohrint_agent.cli:main"

[tool.setuptools.packages.find]
include = ["cohrint_agent*"]
