[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.backends._legacy:_Backend"

[project]
name = "vantage-agent"
version = "0.1.0"
description = "AI coding agent with per-tool permissions, cost tracking, and token optimization"
requires-python = ">=3.9"
dependencies = [
    "anthropic>=0.40.0",
    "rich>=13.0.0",
]

[project.optional-dependencies]
dev = ["pytest>=7.0", "pytest-asyncio>=0.21"]

[project.scripts]
vantage-agent = "vantage_agent.cli:main"

[tool.setuptools.packages.find]
include = ["vantage_agent*"]
