[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "cohrint-agent"
version = "0.2.4"
description = "AI coding agent with per-tool permissions, cost tracking, and token optimization"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.9"
authors = [{ name = "Aman Jain", email = "aman@vantageaiops.com" }]
keywords = ["ai", "agent", "cost-tracking", "claude", "codex", "gemini", "llm"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Utilities",
]
dependencies = [
    "anthropic>=0.40.0",
    "rich>=13.0.0",
]

[project.urls]
Homepage = "https://cohrint.com"
Documentation = "https://cohrint.com/docs"
Repository = "https://github.com/amanjain/vantageai"
"Bug Tracker" = "https://github.com/amanjain/vantageai/issues"

[project.optional-dependencies]
dev = ["pytest>=7.0", "pytest-asyncio>=0.21"]

[project.scripts]
cohrint-agent = "vantage_agent.cli:main"

[tool.setuptools.packages.find]
include = ["vantage_agent*"]
