[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "vantage-ai"
version = "1.0.0"
description = "Enterprise AI cost intelligence — token tracking, model pricing, hallucination detection"
readme = "README.md"
requires-python = ">=3.9"
license = {text = "MIT"}
keywords = ["llm", "observability", "openai", "anthropic", "cost", "monitoring"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Topic :: Software Development :: Libraries",
]
dependencies = [
    "httpx>=0.27.0",
]

[project.optional-dependencies]
openai    = ["openai>=1.0.0"]
anthropic = ["anthropic>=0.40.0"]
litellm   = ["litellm>=1.40.0"]
all       = ["openai>=1.0.0", "anthropic>=0.40.0", "litellm>=1.40.0"]
server    = [
    "fastapi>=0.111.0",
    "uvicorn[standard]>=0.30.0",
    "supabase>=2.5.0",
    "anthropic>=0.40.0",
    "python-dotenv>=1.0.0",
    "pydantic>=2.0.0",
]
dev       = ["pytest>=8.0", "pytest-asyncio>=0.23", "httpx>=0.27"]

[project.urls]
Homepage = "https://vantageai.aman-lpucse.workers.dev"
Documentation = "https://vantageai.aman-lpucse.workers.dev/docs.html"

[tool.setuptools.packages.find]
where = ["."]
include = ["vantage*", "server*"]
