[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "vantageaiops"
version = "0.3.1"
description = "LLM cost tracking and AI API monitoring — token tracking, budget alerts and efficiency analysis for OpenAI, Anthropic, Google and AI agents"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
keywords = ["ai", "llm", "openai", "anthropic", "observability", "cost", "tokens", "hallucination"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

# Core SDK — zero required dependencies
dependencies = []

[project.optional-dependencies]
openai     = ["openai>=1.0.0"]
anthropic  = ["anthropic>=0.34.0"]
google     = ["google-generativeai>=0.7.0"]
litellm    = ["litellm>=1.40.0"]
analysis   = ["anthropic>=0.34.0", "aiohttp>=3.9.0"]
server     = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.0",
    "pydantic>=2.7.0",
    "supabase>=2.5.0",
    "clickhouse-connect>=0.7.0",
    "aiohttp>=3.9.0",
]
all = [
    "openai>=1.0.0",
    "anthropic>=0.34.0",
    "google-generativeai>=0.7.0",
    "litellm>=1.40.0",
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.0",
    "pydantic>=2.7.0",
    "supabase>=2.5.0",
    "clickhouse-connect>=0.7.0",
    "aiohttp>=3.9.0",
]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=5.0.0",
    "ruff>=0.5.0",
    "httpx>=0.27.0",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["vantageaiops*"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
